# surrogate-loop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 2026-07-16-一维热传导神经算子实施计划.md  2026-07-16-一维热传导神经算子闭环设计.md  2026-07-16-二维线弹性神经算子实施计划.md  2026-07-16-二维线弹性神经算子闭环设计.md  2026-07-16-仓库骨架与基础环境实施计划.md  2026-07-16-标量代理模型正式闭环实施计划.md  2026-07-16-标量代理模型闭环设计.md  2026-07-17-Agent协同与演示文档体系实施计划.md  2026-07-17-Agent协同与演示文档体系设计.md  2026-07-17-二维线弹性训练效果改进实施计划.md  2026-07-17-二维线弹性训练效果改进设计.md  README.md  当前能力与状态.md
docs/architecture/: README.md
docs/demos/: Agent接管验收清单.md  README.md  二维线弹性演示手册.md  演示Skill内容草案.md
docs/guides/: Agent协作指南.md  Windows跨机迁移指南.md  一维热传导闭环操作指南.md  二维线弹性闭环操作指南.md  标量闭环操作指南.md  环境与验证.md
docs/周报/: 2026-07-17-第01期-代理模型训练闭环周报.md  2026-07-24-第02期-二维方腔代理模型闭环周报.md  README.md
environments/: fenicsx-0.11.yml
examples/cavity_2d_fluent/: README.md  calibration.json  full.json  smoke.json  vertical.json
examples/elasticity_2d_cantilever/: README.md  calibration.json  smoke.json
examples/forced_reaction_scalar/: README.md  full.json  smoke.json
examples/heat_1d_operator/: README.md  full.json  smoke.json
solvers/: __init__.py
solvers/fenicsx/: __init__.py
src/surrogate_loop/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  data.py  domain.py  evaluation.py  inference.py  models.py  pipeline.py  split.py
tests/: conftest.py
tests/e2e/: README.md  test_cavity2d_loop.py  test_elasticity2d_fenicsx_loop.py  test_elasticity2d_loop.py  test_heat_operator_loop.py  test_scalar_loop.py
tests/fixtures/: elasticity_operator_tiny.json  (+1 more)
(+113 files in other folders)
