[project]
name = "surrogate-loop"
version = "0.1.0"
description = "自然语言驱动、确定性验证的最小代理模型训练闭环"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "joblib>=1.4,<2",
  "matplotlib>=3.8,<4",
  "numpy>=2,<3",
  "pydantic>=2.7,<3",
  "scikit-learn>=1.5,<2",
  "scipy>=1.13,<2",
]

[project.optional-dependencies]
operator = [
  "torch==2.9.0",
]

[project.scripts]
surrogate-loop = "surrogate_loop.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surrogate_loop"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = ["operator: requires the optional PyTorch operator environment"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
